--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,2 +1,7 @@
-*{box-sizing: border-box;}
-body{background-image: url('../imagens/computer-416569_1920.jpg');}
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-image: url('../imagens/computer-416569_1920.jpg');
+}
