--- a/css/style-index.css
+++ b/css/style-index.css
@@ -3,5 +3,35 @@
 }
 
 body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f7f7f7;
     background-image: url('../imagens/computer-416569_1920.jpg');
+    background-repeat: no-repeat;
+}
+.container {
+    max-width: 800px;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+h1, h2 {
+    color: #333;
+}
+p {
+    line-height: 1.6;
+}
+.section {
+    margin-bottom: 20px;
+}
+.section h2 {
+    border-bottom: 2px solid #333;
+    padding-bottom: 5px;
+}
+.section ul {
+    list-style-type: disc;
+    padding-left: 20px;
 }
