--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,7 +1,9 @@
 * {
     box-sizing: border-box;
 }
-
+header{
+    background-color: #F6995C;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
