--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,39 +1,91 @@
-* {
-    box-sizing: border-box;
-}
-header{
-    background-color: #F6995C;
-}
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f7f7f7;
-    background-image: url('../imagens/computer-416569_1920.jpg');
-    background-repeat: no-repeat;
-}
-.container {
-    max-width: 800px;
-    margin: 50px auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-h1, h2 {
+    background-color: #fafafa;
     color: #333;
+    background-image: url('../imagens/computer-416569_1920.jpg');
 }
-p {
+
+.container {
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+    margin: 2rem auto;
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    
+}
+
+.main-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+
+.main-left, .main-right {
+    flex: 1;
+    /* tamanho minimo para conteudo */
+    min-width: 290px; 
+}
+
+.main-right {
+    margin-left: 20px;
+}
+
+h1, h2 {
+    color: #0056b3;
+    /* tamanho da fonte responsiva */
+    font-size: calc(1.4rem + 0.5vw); 
+}
+
+p, li {
+    font-size: calc(0.9rem + 0.3vw);
     line-height: 1.6;
+    margin-bottom: 0.75rem;
 }
-.section {
-    margin-bottom: 20px;
+
+.bold {
+    font-weight: 600;
 }
-.section h2 {
-    border-bottom: 2px solid #333;
-    padding-bottom: 5px;
+
+.italic {
+    font-style: italic;
 }
-.section ul {
-    list-style-type: disc;
-    padding-left: 20px;
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: inside square;
+}
+
+li {
+    margin-bottom: 0.5rem;
+}
+
+.img-container {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.img-container img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%;
+    max-width: 150px; /* Limiting maximum width */
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        margin: 1rem;
+        padding: 1rem;
+    }
+
+    .main-right {
+        margin-left: 0;
+        margin-top: 20px;
+    }
 }
