--- a/css/style-index.css
+++ b/css/style-index.css
@@ -67,15 +67,16 @@ li {
 }
 
 .img-container {
-    text-align: center;
-    margin-top: 2rem;
+    text-align: right;
+    margin-top: 3rem;
 }
 
 .img-container img {
     max-width: 100%;
-    height: auto;
+    height:max-content;
     border-radius: 50%;
-    max-width: 150px; /* Limiting maximum width */
+    max-width: 130px; /* Limiting maximum width */
+   margin-right: 120px;
 }
 
 @media screen and (max-width: 768px) {
