--- a/css/style-index.css
+++ b/css/style-index.css
@@ -18,13 +18,15 @@ body {
     padding: 1rem;
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;    
+    border-radius: 8px;
+      
 }
 
 .main-content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;    
+    justify-content: space-between;
+      
 }
 
 .conteudo-esquerda, .conteudo-direita {
@@ -64,7 +66,7 @@ li {
 
 .img-container {
     text-align: right;
-    margin-top: 3rem;
+    margin-top: 5rem;
 }
 
 .img-container img {
@@ -72,7 +74,7 @@ li {
 
     height:max-content;
 
-    border-radius: 50%;
+    /* border-radius: 50%; */
 
     /* limitando a largura maxima */
 
@@ -94,4 +96,5 @@ li {
 }
 .conteudo-direita {
     margin-left: 20px;
+    
 }
