--- a/css/style-index.css
+++ b/css/style-index.css
@@ -74,7 +74,7 @@ li {
 
     height:max-content;
 
-    /* border-radius: 50%; */
+    border-radius: 50%;
 
     /* limitando a largura maxima */
 
