--- a/css/style-index.css
+++ b/css/style-index.css
@@ -22,7 +22,7 @@ body {
       
 }
 
-.main-content {
+.principal {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -71,16 +71,11 @@ li {
 
 .img-container img {
     max-width: 100%;
-
-    height:max-content;
-
     border-radius: 50%;
-
     /* limitando a largura maxima */
-
-    max-width: 130px;
-
    margin-right: 120px;
+   height: 150px;
+   width: 150px;
 }
 
 @media screen and (max-width: 768px) {
