--- a/css/style-index.css
+++ b/css/style-index.css
@@ -37,7 +37,7 @@ body {
 h1, h2 {
     color: #0C0C0C;
     /* tamanho da fonte responsiva */
-    font-size: calc(1.4rem + 0.5vw); 
+    font-size: calc(1.4rem + 0.5vw);
 }
 
 p, li {
@@ -92,4 +92,11 @@ li {
 .conteudo-direita {
     margin-left: 20px;
     
+}
+header{
+    background-color: #434242;
+    color: #fff;
+}
+h1{
+    color: #fff;
 }
