--- a/css/style-index.css
+++ b/css/style-index.css
@@ -85,6 +85,17 @@ li {
    width: 150px;
    
 }
+header{
+    background-color: #434242;
+    color: #fff;
+    border-radius: 8px;
+}
+h1{
+    color: #fff;
+}
+a{
+    text-decoration: none;
+}
 
 @media screen and (max-width: 768px) {
     .container {
@@ -98,11 +109,3 @@ li {
     }
 }
 
-header{
-    background-color: #434242;
-    color: #fff;
-    border-radius: 8px;
-}
-h1{
-    color: #fff;
-}
