--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,4 +1,7 @@
-*{box-sizing: border-box;}
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -24,30 +27,36 @@ body {
 .principal {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;  
+    justify-content: space-between;
 }
 
-.conteudo-esquerda, .conteudo-direita {
+.conteudo-esquerda,
+.conteudo-direita {
     flex: 1;
     /* tamanho minimo para conteudo */
-    min-width: 290px; 
+    min-width: 290px;
 }
-h1, h2 {
+
+h1,
+h2 {
     color: #0C0C0C;
     /* tamanho da fonte responsiva */
     font-size: calc(1.4rem + 0.5vw);
     margin-left: 0.4rem;
 }
-h1{
+
+h1 {
     text-align: center;
 }
 
-p, li {
+p,
+li {
     font-size: calc(0.9rem + 0.3vw);
     line-height: 1.6;
     margin-bottom: 0.75rem;
     margin-left: 0.4rem;
 }
+
 /* pegando o primeiro paragrafo do tipo para modificação */
 /* p:first-of-type{
     text-align: center;
@@ -57,7 +66,8 @@ p, li {
     font-weight: 600;
 }
 
-.italic, .whatsapp {
+.italic,
+.whatsapp {
     font-style: italic;
     text-align: center;
 }
@@ -81,25 +91,29 @@ li {
     max-width: 100%;
     border-radius: 50%;
     /* limitando a largura maxima */
-   height: 150px;
-   width: 150px;
-   
+    height: 150px;
+    width: 150px;
+
 }
-header{
+
+header {
     background-color: #434242;
     color: #fff;
     border-radius: 8px;
 }
-h1{
+
+h1 {
     color: #fff;
 }
-a{
+
+a {
     text-decoration: none;
     color: #fff;
 }
-.redes a{
+
+.redes a {
     color: #0C0C0C;
-    
+
 }
 
 @media screen and (max-width: 768px) {
@@ -113,4 +127,3 @@ a{
         margin-top: 20px;
     }
 }
-
